2013-11-20  Ondřej Bílka  <neleai@seznam.cz>

	* malloc/hooks.c (memalign_check): Add alignment rounding.
	* malloc/malloc.c (_mid_memalign): New function.
	(__libc_valloc, __libc_pvalloc, __libc_memalign, __posix_memalign):
	Implement by calling _mid_memalign.
	* manual/probes.texi (Memory Allocation Probes): Remove
	memory_valloc_retry and memory_pvalloc_retry.

2013-11-20  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* locale/programs/locarchive.c (open_archive): Add const
	qualifier to ARCHIVEFNAME and copy default fname to
	DEFAULT_FNAME.

	[BZ #15601]
	* libio/tst-widetext.input: Rename Oriya to Odia.
	* locale/iso-639.def: Likewise.

	* manual/probes.texi (Mathematical Function Probes): Add
	documentation for sin, cos, asin and acos probes.
	* sysdeps/ieee754/dbl-64/sincos32.c: Include stap-probe.h.
	(__sin32): Add slowasin probe.
	(__cos32): Add slowacos probe.
	(__mpsin): Add slowsin probe.
	(__mpcos): Add slowcos probe.

2013-11-19  Joseph Myers  <joseph@codesourcery.com>

	[BZ #15483]
	* sysdeps/powerpc/nofpu/sim-full.c (__sim_exceptions): Change to
	thread-local __sim_exceptions_thread and global
	__sim_exceptions_global.
	(__sim_disabled_exceptions): Change to thread-local
	__sim_disabled_exceptions_thread and global
	__sim_disabled_exceptions_global.
	(__sim_round_mode): Change to thread-local __sim_round_mode_thread
	and global __sim_round_mode_global.
	(__simulate_exceptions): Use thread-local floating-point state and
	set global state from it as needed.
	* sysdeps/powerpc/nofpu/Versions (GLIBC_PRIVATE): Add
	__sim_exceptions_thread, __sim_disabled_exceptions_thread and
	__sim_round_mode_thread.
	* sysdeps/powerpc/nofpu/soft-supp.h: Include <shlib-compat.h>.
	(__sim_exceptions): Change to thread-local __sim_exceptions_thread
	and global __sim_exceptions_global.
	(__sim_disabled_exceptions): Change to thread-local
	__sim_disabled_exceptions_thread and global
	__sim_disabled_exceptions_global.